added copyright info

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- added copyright info
+-->
 <head>
 	<title>title has been changed</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
