--- a/simple.html
+++ b/simple.html
@@ -15,11 +15,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			added more content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; another company 2014</p>
 	</footer>
 </body>
 </html>
