master 1st change

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-	<title>title coming from master branch, but hey, its more</title>
+	<title>1st change in master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
