--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-	<title>1st change in master</title>
+	<title>1st change in master, along with other one now</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
