master conflicting changes

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-	<title>master again with chnage</title>
+	<title>more conflicting changes from master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,7 +15,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content, but nothing else
+			Just some content, conflicting changes from master
 		</p>
 	</main>
 	<footer class="container">
