--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-	<title>more conflicting changes from master</title>
+	<title>more conflicting changes from master adsf</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
